--- a/DiscoveryPotion.ipynb
+++ b/DiscoveryPotion.ipynb
@@ -28,13 +28,56 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "wxrUdTcyYmUH"
+        "id": "wxrUdTcyYmUH",
+        "outputId": "6d9afb95-ab79-4d78-8e36-d95f9776bdbf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting chembl_webresource_client\n",
+            "  Downloading chembl_webresource_client-0.10.7-py3-none-any.whl (55 kB)\n",
+            "\u001b[?25l\r\u001b[K     |██████                          | 10 kB 18.3 MB/s eta 0:00:01\r\u001b[K     |███████████▉                    | 20 kB 13.4 MB/s eta 0:00:01\r\u001b[K     |█████████████████▊              | 30 kB 9.5 MB/s eta 0:00:01\r\u001b[K     |███████████████████████▋        | 40 kB 7.7 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▌  | 51 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 55 kB 2.1 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: easydict in /usr/local/lib/python3.7/dist-packages (from chembl_webresource_client) (1.9)\n",
+            "Requirement already satisfied: urllib3 in /usr/local/lib/python3.7/dist-packages (from chembl_webresource_client) (1.24.3)\n",
+            "Collecting requests-cache~=0.7.0\n",
+            "  Downloading requests_cache-0.7.5-py3-none-any.whl (39 kB)\n",
+            "Requirement already satisfied: requests>=2.18.4 in /usr/local/lib/python3.7/dist-packages (from chembl_webresource_client) (2.23.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests>=2.18.4->chembl_webresource_client) (2021.10.8)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests>=2.18.4->chembl_webresource_client) (3.0.4)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests>=2.18.4->chembl_webresource_client) (2.10)\n",
+            "Collecting pyyaml>=5.4\n",
+            "  Downloading PyYAML-6.0-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl (596 kB)\n",
+            "\u001b[K     |████████████████████████████████| 596 kB 11.3 MB/s \n",
+            "\u001b[?25hCollecting itsdangerous>=2.0.1\n",
+            "  Downloading itsdangerous-2.1.2-py3-none-any.whl (15 kB)\n",
+            "Collecting url-normalize<2.0,>=1.4\n",
+            "  Downloading url_normalize-1.4.3-py2.py3-none-any.whl (6.8 kB)\n",
+            "Requirement already satisfied: attrs<22.0,>=21.2 in /usr/local/lib/python3.7/dist-packages (from requests-cache~=0.7.0->chembl_webresource_client) (21.4.0)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from url-normalize<2.0,>=1.4->requests-cache~=0.7.0->chembl_webresource_client) (1.15.0)\n",
+            "Installing collected packages: url-normalize, pyyaml, itsdangerous, requests-cache, chembl-webresource-client\n",
+            "  Attempting uninstall: pyyaml\n",
+            "    Found existing installation: PyYAML 3.13\n",
+            "    Uninstalling PyYAML-3.13:\n",
+            "      Successfully uninstalled PyYAML-3.13\n",
+            "  Attempting uninstall: itsdangerous\n",
+            "    Found existing installation: itsdangerous 1.1.0\n",
+            "    Uninstalling itsdangerous-1.1.0:\n",
+            "      Successfully uninstalled itsdangerous-1.1.0\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "flask 1.1.4 requires itsdangerous<2.0,>=0.24, but you have itsdangerous 2.1.2 which is incompatible.\u001b[0m\n",
+            "Successfully installed chembl-webresource-client-0.10.7 itsdangerous-2.1.2 pyyaml-6.0 requests-cache-0.7.5 url-normalize-1.4.3\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "! pip install chembl_webresource_client"
       ]
     }
   ]
