--- a/DiscoveryPotion.ipynb
+++ b/DiscoveryPotion.ipynb
@@ -79,6 +79,29 @@
       "source": [
         "! pip install chembl_webresource_client"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\".\")"
+      ],
+      "metadata": {
+        "id": "FL2qgdlOdQ5E",
+        "outputId": "84d9294d-3325-4705-ace6-2c9faca51305",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            ".\n"
+          ]
+        }
+      ]
     }
   ]
 }
