Update Descriptor Dataset Preparation.ipynb

--- a/Google Collab Files/Descriptor Dataset Preparation.ipynb
+++ b/Google Collab Files/Descriptor Dataset Preparation.ipynb
@@ -2328,7 +2328,7 @@
         "id": "75npGyvhae0e"
       },
       "source": [
-        "final_data_entries.to_csv('target_part2_bio_6.csv', index=False)"
+        "final_data_entries.to_csv('acetylcholinesterase_06_bioactivity_data_3class_pIC50_pubchem_fp.csv', index=False)"
       ],
       "execution_count": null,
       "outputs": []
